syntax = "proto3";

package proto;

import "merchandise.proto";

message AddRequest {

    string account_id = 1;

    string product_id = 2;
}


message CartRequest {
    string account_id = 1;
}

message UserCart {

    repeated Product products = 1;
}

service Cart {

    rpc ViewCart(CartRequest) returns (UserCart);

    rpc AddToCart(AddRequest) returns (Product);

}

